# ai-sdr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
config/: config.yaml  sales_context.yaml
config/examples/: campaign_pattern_sharing.txt  campaign_proof_led.txt  campaign_qualification_led.txt  response_handlers.txt
config/prompts/: analyze_edits.txt  classify_lead.txt  draft_followup.txt  draft_reply.txt  evaluate_connection.txt
scripts/: backfill_contacts.py
sdr/: config.py  db.py  followup.py  main.py  models.py  outbound.py  pipeline.py
sdr/ai/: classifier.py  connection_eval.py  learner.py  prompts.py  reply_drafter.py
sdr/connections/: handler.py
sdr/crm/: airtable.py  dedup.py
sdr/enrichment/: apollo.py  enricher.py  perplexity.py
sdr/sending/: rate_limiter.py  sender.py
sdr/sources/: base.py  gmail.py  linkedin.py
tests/: conftest.py  test_classifier.py  test_dedup.py  test_pipeline.py  test_reply_quality.py
tests/fixtures/: labeled_messages.json  sample_connection_request.json  sample_gmail_thread.json  sample_linkedin_dm.json
